--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "dist/",
+                        "outputPath": "dist/book-finder",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": "src/polyfills.ts",
@@ -26,10 +26,13 @@
                             "src/favicon.ico",
                             "src/assets"
                         ],
-                        "styles": [
-                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                            "src/styles.scss",
-                            "../node_modules/font-awesome/css/font-awesome.css"
+                        "styles": [{
+                                "input": "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+                            },
+                            {
+                                "input": "./node_modules/font-awesome/css/font-awesome.min.css"
+                            },
+                            "src/styles.css"
                         ],
                         "scripts": [],
                         "es5BrowserSupport": true
@@ -81,8 +84,13 @@
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "src/tsconfig.spec.json",
                         "karmaConfig": "src/karma.conf.js",
-                        "styles": [
-                            "src/styles.scss"
+                        "styles": [{
+                                "input": "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+                            },
+                            {
+                                "input": "./node_modules/font-awesome/css/font-awesome.min.css"
+                            },
+                            "src/styles.css"
                         ],
                         "scripts": [],
                         "assets": [
